--- a/sample/Sample/Sample.csproj
+++ b/sample/Sample/Sample.csproj
@@ -10,6 +10,9 @@
     <ProjectReference Include="..\..\src\Extensions.ApplicationInsights\Extensions.ApplicationInsights.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
