--- a/src/Extensions.ApplicationInsights/Extensions.ApplicationInsights.csproj
+++ b/src/Extensions.ApplicationInsights/Extensions.ApplicationInsights.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyName>isual</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
